--- a/src/fileclient/ClientForm.form
+++ b/src/fileclient/ClientForm.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
+<Form version="1.8" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
     <Property name="resizable" type="boolean" value="false"/>
@@ -173,7 +173,7 @@
     </Component>
     <Component class="javax.swing.JTextField" name="txtIP">
       <Properties>
-        <Property name="text" type="java.lang.String" value="127.0.0.1"/>
+        <Property name="text" type="java.lang.String" value="10.0.54.3"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel8">
@@ -211,7 +211,7 @@
     </Component>
     <Component class="javax.swing.JTextField" name="txtCaminho">
       <Properties>
-        <Property name="text" type="java.lang.String" value="/home/marcio/Downloads/"/>
+        <Property name="text" type="java.lang.String" value="C:\u005cUsers\u005cALUNO\u005cDesktop\u005crecebidos" containsInvalidXMLChars="true"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtCaminhoActionPerformed"/>
